--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1424,7 +1424,7 @@ img{
     text-align: center;
     padding: 15px 10px;
     font-size: 18px;
-    color: #6e665f;
+    // color: #6e665f;
     position: relative;
 }
 .order-product-list .tRow .cel:nth-child(4):after, .order-product-list .tRow .cel:nth-child(5):after, .order-product-list .tRow .cel:nth-child(6):after, .order-product-list .tRow .cel:nth-child(7):after{
@@ -1893,11 +1893,14 @@ img{
 .orders-list-table .tRow {
 	display: table-row;
 }
-.orders-list-table div.tRow.orders-list-order{
+.orders-list-table div.tRow.orders-list-order, .order-product-list form.tRow.product-list-item, .order-product-list form.tRow.product-list-item .cel a{
 	color: #6e665f;
 }
-.orders-list-table div.tRow.orders-list-order:hover{
+.orders-list-table div.tRow.orders-list-order:hover, .order-product-list form.tRow.product-list-item:hover{
 	color: #FF7E00;
+}
+.order-product-list form.tRow.product-list-item .cel a:hover{
+	color: indigo;
 }
 
 .orders-list-table .tRow i{
@@ -1935,6 +1938,10 @@ img{
     font-size: 16px;
     color: inherit;
     position: relative;
+}
+
+.order-product-list .tRow .cel {
+	color: inherit;
 }
 // .orders-list-table .tRow .cel:first-child a{
 //     color: #6e665f;
