--- a/app/views/spree/manage/products/index.html.erb
+++ b/app/views/spree/manage/products/index.html.erb
@@ -62,25 +62,25 @@
 
     <% @products.each do |product| %>
       <%= form_for :order, html: {class: "tRow product-list-item"}, url: populate_manage_orders_path(format: 'js', index: product.master.id), remote: true do |f| %>
-				<% url = spree.product_url(product) %>
+				<% url = manage_product_url(product) %>
 
           <div class="cel">
-            <%= link_to small_image(product, itemprop: "image"), manage_product_url(product), itemprop: 'url' %><br/>
+            <%= link_to small_image(product, itemprop: "image"), url, itemprop: 'url' %><br/>
           </div>
           <!-- <div class="cel"> -->
-            <a href="<%= manage_product_url(product) %>" class="cel"><%= product.name %></a>
+            <a href="<%= url %>" class="cel"><%= product.name %></a>
           <!-- </div> -->
           <!-- <div class="cel"> -->
-            <a href="<%= manage_product_url(product) %>" class="cel"><%= product.sku %></a>
+            <a href="<%= url %>" class="cel"><%= product.sku %></a>
           <!-- </div> -->
           <!-- <div class="cel sort-pack_size"> -->
-            <a href="<%= manage_product_url(product) %>" class="cel sort-pack_size">Each</a>
+            <a href="<%= url %>" class="cel sort-pack_size">Each</a>
           <!-- </div> -->
           <!-- <div class="cel sort-lead_time"> -->
-            <a href="<%= manage_product_url(product) %>" class="cel sort-lead_time">1 day</a>
+            <a href="<%= url %>" class="cel sort-lead_time">1 day</a>
           <!-- </div> -->
           <!-- <div class="cel sort-price"> -->
-            <a href="<%= manage_product_url(product) %>" class="cel sort-price"><%= number_to_currency(product.price) %></a>
+            <a href="<%= url %>" class="cel sort-price"><%= number_to_currency(product.price) %></a>
           <!-- </div> -->
           <div class="mobile-divider"></div>
           <div class="cel">
