Implementing user profile pic uploading from admin.

--- a/app/views/spree/admin/customer_images/index.html.erb
+++ b/app/views/spree/admin/customer_images/index.html.erb
@@ -31,7 +31,7 @@
             <% end %>
           </td>
           <td class="image">
-            <%= link_to image_tag(image.attachment.url(:mini)), image.attachment.url(:customer) %>
+            <%= link_to image_tag(image.attachment.url(:mini)), image.attachment.url(:product) %>
           </td>
           <td><%= image.alt %></td>
           <td class="actions actions-2 text-right">
