--- a/app/views/spree/admin/user_images/index.html.erb
+++ b/app/views/spree/admin/user_images/index.html.erb
@@ -1,15 +1,19 @@
-<%= render partial: 'spree/admin/shared/vendor_tabs', locals: { current: :images } %>
-
-<% content_for :page_actions do %>
-  <%= button_link_to(Spree.t(:new_image), spree.new_admin_vendor_vendor_image_url(@vendor), { class: "btn-success", icon: 'add', id: 'new_image_link' }) if can? :create, Spree::Image %>
+<% content_for :page_title do %>
+	<%= "#{@user.firstname} #{@user.lastname}" %> <%= Spree.t(:images) %>
 <% end %>
 
-<% unless @vendor.images.any? %>
+<%= render partial: 'spree/admin/users/sidebar', locals: { current: :images } %>
+
+<% content_for :page_actions do %>
+  <%= button_link_to(Spree.t(:new_image), spree.new_admin_user_user_image_url(@user), { class: "btn-success", icon: 'add', id: 'new_image_link' }) if can? :create, Spree::Image %>
+<% end %>
+
+<% unless @user.images.any? %>
   <div class="alert alert-warning">
     <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::Image)) %>.
   </div>
 <% else %>
-  <table class="table sortable" data-hook="images_table" data-sortable-link="<%= update_positions_admin_vendor_vendor_images_url(@vendor) %>">
+  <table class="table sortable" data-hook="images_table">
     <thead>
       <tr data-hook="images_header">
         <th colspan="2">
@@ -23,7 +27,7 @@
     </thead>
 
     <tbody>
-      <% (@vendor.images).each do |image| %>
+      <% (@user.images).each do |image| %>
         <tr id="<%= spree_dom_id image %>" data-hook="images_row">
           <td class="move-handle text-center">
             <% if can? :edit, image %>
@@ -35,8 +39,8 @@
           </td>
           <td><%= image.alt %></td>
           <td class="actions actions-2 text-right">
-            <%= link_to_with_icon('edit', Spree.t(:edit), spree.edit_admin_vendor_vendor_image_url(@vendor, image), class: 'btn btn-primary btn-sm', no_text: true, data: { action: 'edit' }) if can? :edit, image %>
-            <%= link_to_delete(image, { url: spree.admin_vendor_vendor_image_url(@vendor, image), no_text: true }) if can? :destroy, image %>
+            <%= link_to_with_icon('edit', Spree.t(:edit), spree.edit_admin_user_user_image_url(@user, image), class: 'btn btn-primary btn-sm', no_text: true, data: { action: 'edit' }) if can? :edit, image %>
+            <%= link_to_delete(image, { url: spree.admin_user_user_image_url(@user, image), no_text: true }) if can? :destroy, image %>
           </td>
         </tr>
       <% end %>
