--- a/app/views/spree/manage/root/app_dash_widget/_payment_status_table.html.erb
+++ b/app/views/spree/manage/root/app_dash_widget/_payment_status_table.html.erb
@@ -5,14 +5,11 @@
     <th>Connection</th>
     <th>Last Invoice</th>
   </tr>
+  <% @customers.each do |customer| %>
   <tr>
-    <td>Whole Foods</td>
+    <td><%= customer.name %></td>
     <td><i class="fa fa-check"></i></td>
-    <td>3 days ago</td>
+    <td> <%= customer.orders.where('delivery_date <= ?', DateTime.current.to_date).order('delivery_date DESC').limit(1).first.delivery_date.to_date.to_formatted_s(:long) %> </td>
   </tr>
-  <tr>
-    <td>Dean and Deluca</td>
-    <td><i class="fa fa-check"></i></td>
-    <td>28 days ago</td>
-  </tr>
+  <% end %>
 </table>
