--- a/app/views/spree/admin/orders/_delivery_date.html.erb
+++ b/app/views/spree/admin/orders/_delivery_date.html.erb
@@ -1,5 +1,4 @@
-
-<%= form_for @order, url: delivery_update_admin_customer_order_path(@order.customer_id, @order.number), html: { method: :patch, id: "delivery_form"}  do |f|%>
+<%= form_for @order, url: delivery_update_admin_order_path(@order.number), html: { method: :patch, id: "delivery_form"}  do |f|%>
 
   <%= f.label :delivery_date, placeholder: "Delivery Date" %>
   <%= f.date_field :delivery_date, placeholder: "Delivery Date" %>
