Add new product in manage portal

--- a/app/views/spree/manage/products/_master_variant_form.html.erb
+++ b/app/views/spree/manage/products/_master_variant_form.html.erb
@@ -27,11 +27,8 @@
     </div>
     <div class="rightpart">
       <p>
-        <%#= f.label :price %>
-        <%= f.fields_for :prices do |price_field| %>
-          <%= price_field.label :price %>
-          <%= price_field.text_field :amount %>
-        <% end %>
+        <%= f.label :price %>
+        <%= f.text_field :price %>
       </p>
     </div>
     <!-- <div class="datepicker-block">
