Add variants from product edit page

--- a/app/views/spree/manage/products/edit.html.erb
+++ b/app/views/spree/manage/products/edit.html.erb
@@ -15,7 +15,7 @@
     <div class="product-edit-buttons">
       <!-- <a href="" class="cta-button white"><i class="fa fa-plus"></i> Add new size</a> -->
       <!-- <input type="submit" value="Remove product"> -->
-      <!-- <a href="" class="cta-button white">Save</a> -->
+      <%= submit_tag 'Add Variant', class: "cta-button" %>
       <button class="cta-button white">Update</button>
       <div class="clear"></div>
     </div>
