Format side menu, still needs to be scrollable

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -58,6 +58,7 @@ img{
 }
 .relative{
 	position: relative;
+	min-height: 100%;
 }
 ::-webkit-input-placeholder {color:#ccc;}
 ::-moz-placeholder          {color:#ccc;}
@@ -407,7 +408,7 @@ img{
 	top: 52;
 	left: 0;
 	width: 0;
-	height: 0;
+	min-height: 100%;
 	margin-left: -100%;
 	overflow: hidden;
 	float: left;
@@ -421,16 +422,16 @@ img{
 	-o-transition: all 0.17s ease;
 	transition: all 0.17s ease;
 }
-.app_ui-wrapper aside::after {
-    content: "";
-    height: 2000px;
-    bottom: 0;
-    background: #4C4743 none repeat scroll 0% 0%;
-    width: 100%;
-    position: relative;
-    left: 0;
-    display: block;
-}
+// .app_ui-wrapper aside::after {
+//     content: "";
+//     height: 2000px;
+//     bottom: 0;
+//     background: #4C4743 none repeat scroll 0% 0%;
+//     width: 100%;
+//     position: relative;
+//     left: 0;
+//     display: block;
+// }
 .app_ui-wrapper aside.active{
 	margin-left: 0;
 	width: 270px;
