--- a/app/views/spree/layouts/manage.html.erb
+++ b/app/views/spree/layouts/manage.html.erb
@@ -39,9 +39,9 @@
         <%# Sidebar                                         %>
         <%#-------------------------------------------------%>
         <!-- <div class="col-sm-3 col-md-2 hidden-xs sidebar" id="main-sidebar" data-hook="admin_tabs"> -->
-        <div class="relative">
+        <!-- <div class="relative"> -->
           <%= render 'spree/manage/shared/side_menu/side_menu' %>
-        </div>
+        <!-- </div> -->
 
         <%#-------------------------------------------------%>
         <%# Content                                         %>
