Cannot create order if customer has no users

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -408,7 +408,7 @@ img{
 	top: 52;
 	left: 0;
 	width: 0;
-	min-height: 100%;
+	// min-height: 100%;
 	margin-left: -100%;
 	overflow: hidden;
 	float: left;
