--- a/app/views/spree/manage/root/app_dash_widget/_payment_status_table.html.erb
+++ b/app/views/spree/manage/root/app_dash_widget/_payment_status_table.html.erb
@@ -6,10 +6,11 @@
     <th>Last Invoice</th>
   </tr>
   <% @customers.each do |customer| %>
-  <tr>
-    <td><%= customer.name %></td>
-    <td><i class="fa fa-check"></i></td>
-    <td> <%= customer.orders.where('delivery_date <= ?', DateTime.current.to_date).order('delivery_date DESC').limit(1).first.delivery_date.to_date.to_formatted_s(:long) %> </td>
-  </tr>
+    <% next if customer.orders.count == 0 %>
+    <tr>
+      <td><%= customer.name %></td>
+      <td><i class="fa fa-check"></i></td>
+      <td> <%= customer.orders.where('delivery_date <= ?', DateTime.current.to_date).order('delivery_date DESC').limit(1).first.delivery_date.to_date.to_formatted_s(:long) %> </td>
+    </tr>
   <% end %>
 </table>
