Allow sorting on filtered customers and vendors in order index views

--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -9,6 +9,9 @@
     <div class="search-block">
       <form id="filter-form">
         <%= select(:vendor, :name) do%>
+        <% if @current_vendor_id %>
+          <option value="<%= @current_vendor_id %>"><%= Spree::Vendor.find(@current_vendor_id).name %></option>
+        <% end %>
           <option value="all">All</option>
           <%= options_for_select (@customer.vendors.collect(&:name)) %>
         <% end %>
