Fix css on header and side menu

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -358,7 +358,10 @@ img{
 }
 .app_ui-wrapper .header .header{
 	position: fixed;
-	width: 100%;
+	// width: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
 }
 
 .header .nav-ico, .header .search-ico, .header .settings-ico, .header .exit-ico{
