Making logo a link to home in header

--- a/app/views/spree/cust/shared/_header.html.erb
+++ b/app/views/spree/cust/shared/_header.html.erb
@@ -1,5 +1,7 @@
 <header class="header">
-  <div class="logo"></div>
+  <%= link_to vendors_path do %>
+    <div class="logo"></div>
+  <% end %>  
   <div class="header-nav">
     <div class="nav-ico"></div>
     <div id="sb-search" class="search-ico sb-search" style="display: none">
