--- a/app/views/spree/cust/orders/index.html.erb
+++ b/app/views/spree/cust/orders/index.html.erb
@@ -87,7 +87,7 @@
                 <%= order.state %>
               </a>
               <a href="<%= order_url(order) %>" class="orders-list-order-link cel">
-                  <% if order.delivery_date > DateTime.tomorrow ||(order.delivery_date == DateTime.tomorrow && Time.now < order.vendor.order_cutoff_time.to_datetime)%>
+                  <% if order.delivery_date > DateTime.tomorrow.in_time_zone ||(order.delivery_date == DateTime.tomorrow.in_time_zone && Time.current < order.vendor.order_cutoff_time.in_time_zone)%>
                   	<!-- <a href="<%#= edit_order_url(order) %>">(Edit)</a> -->
                     Edit
                   <% elsif order.state != 'complete' %>
