--- a/app/views/spree/cust/orders/show.html.erb
+++ b/app/views/spree/cust/orders/show.html.erb
@@ -17,7 +17,7 @@
 			<div class="orders-nav">
 				<!-- <a href="#" class="nav-left"><i class="fa fa-chevron-left"></i></a> -->
 				<span class="order-id">Order #<%= @order.number %>
-					<% unless @order.delivery_date < DateTime.tomorrow ||(@order.delivery_date == DateTime.tomorrow && Time.now > @order.vendor.order_cutoff_time.to_datetime)%>
+					<% unless @order.delivery_date < DateTime.tomorrow.in_time_zone ||(@order.delivery_date == DateTime.tomorrow.in_time_zone && Time.current > @order.vendor.order_cutoff_time.in_time_zone)%>
 						<a href="<%= edit_order_url(@order) %>">Edit</a>
 					<% end %>
 				</span>
