--- a/app/views/spree/cust/orders/new.html.erb
+++ b/app/views/spree/cust/orders/new.html.erb
@@ -37,25 +37,25 @@
 		<div class="orders-list-table">
 			<div class="header">
 				<div class="cel"></div>
-				<div class="cel">
-					<a href="" class="sort-name">Item <i class="fa fa-sort"></i></a>
+				<div class="cel">Item
+					<!-- <a href="" class="sort-name">Item <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					<a href="" class="sort-name">SKU <i class="fa fa-sort"></i></a>
+				<div class="cel">SKU
+					<!-- <a href="" class="sort-name">SKU <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					<a href="" class="sort-sku">Pack/Size <i class="fa fa-sort"></i></a>
+				<div class="cel">Pack/Size
+					<!-- <a href="" class="sort-sku">Pack/Size <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					<a href="" class="sort-lead_time">Price <i class="fa fa-sort"></i></a>
+				<div class="cel">Price
+					<!-- <a href="" class="sort-lead_time">Price <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					<a href="" class="sort-pack_size">Qty <i class="fa fa-sort"></i></a>
+				<div class="cel">Qty
+					<!-- <a href="" class="sort-pack_size">Qty <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					<a href="" class="sort-price">Total <i class="fa fa-sort"></i></a>
+				<div class="cel">Total
+					<!-- <a href="" class="sort-price">Total <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">Out of Stock</div>
+				<div class="cel"></div>
 			</div>
 
 			<div class="order-items-block">
