--- a/app/views/spree/manage/orders/edit.html.erb
+++ b/app/views/spree/manage/orders/edit.html.erb
@@ -1,11 +1,11 @@
 <div class="search-area layout2">
 	<a href="<%= manage_orders_url %>" class="cta-link">Back to all Orders</a>
-	<div class="search-block">
+	<!-- <div class="search-block">
 		<form id="search-form">
 			<input type="text" placeholder="Search by order#">
 			<input type="submit" value="Search">
 		</form>
-	</div>
+	</div> -->
 </div>
 
 <%= form_for ([:manage, @order]),url: manage_order_url, method: "patch", html: { id: 'single-order-form' } do |order_form| %>
