--- a/app/views/spree/manage/orders/edit.html.erb
+++ b/app/views/spree/manage/orders/edit.html.erb
@@ -28,7 +28,7 @@
 		<div class="clear"></div>
 
 		<div class="orders-list-table">
-			<div class="header">
+			<div class="tRow header">
 				<div class="cel"></div>
 				<div class="cel">
 					<%= sortable "name", "Item" %>
@@ -48,8 +48,8 @@
 					<%= sortable "quantity" %>
 					<!-- <a href="" class="sort-pack_size">Qty <i class="fa fa-sort"></i></a> -->
 				</div>
-				<div class="cel">
-					<a href="" class="sort-price">Total <i class="fa fa-sort"></i></a>
+				<div class="cel">Total
+					<!-- <a href="" class="sort-price">Total <i class="fa fa-sort"></i></a> -->
 				</div>
 				<div class="cel">Out of Stock</div>
 			</div>
