--- a/app/views/spree/cust/orders/_line_item.html.erb
+++ b/app/views/spree/cust/orders/_line_item.html.erb
@@ -1,7 +1,7 @@
 <% variant = line_item.variant %>
 
 
-<%= order_form.fields_for @line_items, line_item do |item_form| %>
+<%= order_form.fields_for :line_items, line_item do |item_form| %>
     <div class="order-item">
       <div class="cel">
         <%= link_to raw("<i class='fa fa-times'></i>"), {action: :unpopulate, order_id: @order.id, index: line_item.id},
