Back to catalog buttons on product show pages

--- a/app/views/spree/cust/products/show.html.erb
+++ b/app/views/spree/cust/products/show.html.erb
@@ -1,4 +1,7 @@
-
+<div class="search-area layout2">
+  <a href="<%= manage_products_url %>" class="cta-link">Back to Catalog</a>
+</div>
+<div class="clear"></div>
 
 <% if @current_order %>
   <h3>Order <a href="<%= order_url(@current_order) %>">#<%= @current_order.number %>
