Add cart and order total in header

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -399,7 +399,25 @@ img{
 .header .settings-ico{
 	float: right;
 }
-.header .exit-ico{
+
+.header #shopping-cart{
+	margin-top: 4px;
+	padding: 8px 20px;
+	background: #4C4743;
+	border-radius: 5px;
+	float:right;
+}
+.header a#shopping-cart{
+	color: #fff;
+	i {
+		font-size: 18px;
+	}
+}
+.header a#shopping-cart:hover{
+	color: #FF7E00;
+}
+
+.header .exit-ico, .header .settings-ico{
     margin-left: 21px;
 	float: right;
 }
