Link entire line_item on single order view to product

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -2096,6 +2096,19 @@ img{
 	margin-bottom: 4px;
 	position: relative;
 }
+.single-order-block .order-items-block .order-items-el .order-item:hover {
+	color: #FF7E00;
+}
+.single-order-block .order-items-block .order-items-el .order-item a{
+	color: inherit;
+}
+.single-order-block .order-items-block .order-items-el .order-item a#delete-item-button{
+	color: #FF7E00;
+}
+.single-order-block .order-items-block .order-items-el .order-item a#delete-item-button:hover{
+	color: #EB2102;
+}
+
 .single-order-block .orders-list-table .cel {
     padding: 10px 10px 5px 10px;
     font-size: 16px;
