--- a/app/views/spree/cust/products/show.html.erb
+++ b/app/views/spree/cust/products/show.html.erb
@@ -41,6 +41,9 @@
     									<div class="cel">
     										<b>SKU #</b> <%= variant.sku %>
     									</div>
+                      <div class="cel">
+                        <b>Lead Time (Days):</b> <%= variant.lead_time %>
+                      </div>
     									<div class="cel">
     										<b>Pack/Size:</b> Each
     									</div>
