--- a/app/views/spree/manage/products/_variant_form.html.erb
+++ b/app/views/spree/manage/products/_variant_form.html.erb
@@ -22,9 +22,8 @@
   <div class="col3">
     <div class="leftpart">
       <p>
-        <label>Pack/Size:
-          <input type="text" name="" value="Each">
-        </label>
+        <%= f.label :pack_size %>
+        <%= f.text_field :pack_size %>
         <!-- <select name="pack_size:" id="pack_size">
           <option value="none">Each</option>
           <option value="option 1">Option 1</option>
