Set width on recent orders

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -1311,8 +1311,10 @@ img{
     display: block;
     text-align: center;
     text-transform: uppercase;
+		width: 200px;
 }
 .search-area .recent-block .recent-list a#recent_orders i{
+	float: right;
 	margin-left: 5px;
 }
 .search-area .recent-block .recent-list a#recent_orders.active i{
