Add start order button to more pages

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -832,6 +832,11 @@ img{
 	float:right;
 }
 
+.app_ui-wrapper .app_ui-block .cta-link.new-customer{
+	float: left;
+	margin-top: 20px;
+}
+
 /* Modal popup */
 #basic-modal-content {
 	display:none;
