--- a/app/views/spree/cust/orders/show.html.erb
+++ b/app/views/spree/cust/orders/show.html.erb
@@ -1,5 +1,6 @@
 <div class="search-area layout2">
 	<a href="<%= orders_url %>" class="cta-link">Back to all Orders</a>
+	<a href="<%= new_order_url %>" class="new-order-button">Start New Order</a>
 	<!-- <div class="search-block">
 		<form id="search-form">
 			<input type="text" placeholder="Search by order#">
