--- a/app/views/spree/manage/root/overview.html.erb
+++ b/app/views/spree/manage/root/overview.html.erb
@@ -1,9 +1,11 @@
-<head>
+<!-- <head>
 	<title>Business Overview</title>
-</head>
+</head> -->
 
-<body>
-					<h1>Business Overview</h1>
+
+				<h1 class="catalog-title">Business Overview</h1>
+					<a href="<%= new_manage_order_url %>" class="new-order-button">Start New Order</a>
+					<div class="clear"></div>
 
 					<form action="#" id="chart-form">
 
@@ -64,5 +66,3 @@
 <!-- Scripts -->
 <%= javascript_include_tag "spree/manage/js/chart_scripts.js" %>
 <!-- // -->
-</body>
-</html>
