--- a/app/views/spree/manage/customers/index.html.erb
+++ b/app/views/spree/manage/customers/index.html.erb
@@ -1,5 +1,6 @@
 <h1 class="catalog-title"> <%= current_spree_user.vendor.name %> Customer List</h1>
-<a href="<%= new_manage_customer_url %>" class="new-order-button">New Customer</a>
+
+<a href="<%= new_manage_order_url %>" class="new-order-button">Start New Order</a>
 
 <div class="clear"></div>
 <ul class="customer-list">
@@ -8,4 +9,5 @@
       <a href="<%= manage_customer_url(customer) %>"><%= customer.name %></a>
     </li>
   <% end %>
+  <li><a href="<%= new_manage_customer_url %>" class="cta-link new-customer">New Customer</a></li>
 </ul>
