--- a/app/views/spree/manage/products/show.html.erb
+++ b/app/views/spree/manage/products/show.html.erb
@@ -1,5 +1,6 @@
 <div class="search-area layout2">
   <a href="<%= manage_products_url %>" class="cta-link">Back to Catalog</a>
+  <a href="<%= new_manage_order_url %>" class="new-order-button">Start New Order</a>
 </div>
 <div class="clear"></div>
 
