--- a/app/views/spree/cust/products/show.html.erb
+++ b/app/views/spree/cust/products/show.html.erb
@@ -46,7 +46,7 @@
                         <b>Lead Time (Days):</b> <%= variant.lead_time %>
                       </div>
     									<div class="cel">
-    										<b>Pack/Size:</b> <%= variant.pack_size ? variant.pack_size : "Each" %>
+    										<b>Pack/Size:</b> <%= variant.pack_size %>
     									</div>
     									<div class="cel">
     										<b>Price:</b> <%= number_to_currency(variant.price) %>
