--- a/app/views/spree/manage/products/_form.html.erb
+++ b/app/views/spree/manage/products/_form.html.erb
@@ -29,8 +29,10 @@
   </div>
   <div class="col2">
     <div class="relative description-wrap">
-      <textarea class="description" name="product[description]"> <%= @product.description %></textarea>
-      <!-- <p class="checkbox-block"><label>V<input type="checkbox" id="v"></label><label>VG<input type="checkbox" id="vg"></label><label>GF<input type="checkbox" id="gf"></label></p> -->
+      <label>Product Description
+        <textarea class="description" name="product[description]"> <%= @product.description %></textarea>
+        <!-- <p class="checkbox-block"><label>V<input type="checkbox" id="v"></label><label>VG<input type="checkbox" id="vg"></label><label>GF<input type="checkbox" id="gf"></label></p> -->
+      </label>
     </div>
   </div>
 </div>
