color scrollbar on sidemenu

--- a/app/assets/stylesheets/spree/manage/css/style.scss.erb
+++ b/app/assets/stylesheets/spree/manage/css/style.scss.erb
@@ -447,6 +447,9 @@ img{
 .app_ui-wrapper aside.active.active-tablet{
 	overflow-y: auto;
 }
+.app_ui-wrapper aside.active.active-tablet::-webkit-scrollbar{
+	background-color: #4C4743;
+}
 .app_ui-wrapper aside.active{
 	margin-left: 0;
 	width: 270px;
